--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,8 +7,16 @@
     {
       "type": "node",
       "request": "launch",
-      "name": "启动程序",
-      "program": "${workspaceFolder}/stream/stream.js"
+      "name": "Mocha Tests",
+      "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
+      "args": [
+        "--require", "ts-node/register",
+        "-u", "tdd",
+        "--timeout", "999999",
+        "--colors", "--recursive",
+        "${workspaceFolder}/tests/*.ts"
+      ],
+      "internalConsoleOptions": "openOnSessionStart"
     }
   ]
 }
